@@ -7,11 +7,12 @@ namespace cppdomtest
    const std::string game_xml_filename("data/game.xml");
    const std::string nodetest_xml_filename("data/nodetest.xml");
    const std::string simple_nodes_xml_filename("data/simple_nodes.xml");
-       
+   const std::string equal_test_xml_filename("data/equal_test.xml");
+
    const std::string rime_xml_filename("data/rime10.xml");
    const std::string hamlet_xml_filename("data/hamlet.xml");
-   
+
    const std::string xml_spec_filename("data//REC-xml-20040204.xml");
 }
-      
+
 #endif
